# stellarspend-contracts

./: Cargo.toml
contracts/: governance.rs
contracts/access-control/: README.md
contracts/access-control/src/: test.rs
contracts/audit/src/: lib.rs  test.rs
contracts/batch-transfer-pausable/src/: lib.rs  test.rs  types.rs
contracts/batch-transfer/src/: lib.rs  test.rs  validation.rs
contracts/batch-wallet-creation/src/: lib.rs  test.rs  validation.rs
contracts/budget-allocation/src/: lib.rs  test.rs  types.rs
contracts/budget/src/: lib.rs  libs.rs  templates.rs
contracts/contract-upgrade/new_contract/src/: upgrade_auth.rs
contracts/fee/src/: auth.rs  fee_validation.rs  history_test.rs  lib.rs  storage.rs
contracts/fee/tests/: batch_preview.rs  min_fee.rs  validation.rs
contracts/multi-currency-wallet/src/: auth.rs
contracts/recurring/: executor.rs  mod.rs  scheduler.rs  types.rs
contracts/savings-goals/src/: lib.rs  test.rs  types.rs  validation.rs
contracts/shared/src/: auth.rs  lib.rs
contracts/spending-categories/src/: merchant_tag.rs
contracts/spending-limits/src/: lib.rs  test.rs  types.rs  validation.rs
contracts/tests/: governance_test.rs  integration_tests.rs
contracts/transaction-analytics/src/: fees.rs
contracts/transaction-validation/: Cargo.toml
contracts/transaction-validation/src/: lib.rs  test.rs  validation.rs
contracts/transactions/src/: lib.rs  storage.rs  test.rs
contracts/users/src/: lib.rs  storage.rs  test.rs
