[workspace]
resolver = "2"
members = [
    "contracts/balance",
    "contracts/stellarspend-contracts",
    "contracts/transaction-analytics",
    "contracts/contract-upgrade/old_contract",
    "contracts/contract-upgrade/new_contract",
    "contracts/shared",
    "contracts/batch-transfer",
    "contracts/batch-conversion",
    "contracts/batch-rewards",
    "contracts/batch-payment",
    "contracts/batch-payment-reminders",
    "contracts/batch-wallet-creation",
    "contracts/budget-recommendations",
    "contracts/fee",
    "contracts/shared-budgets",
    "contracts/multi-currency-wallet",
    "contracts/spending-limits",
    "contracts/savings-goals",
    "contracts/batch-history",
    "contracts/batch-notifications",
    "contracts/escrow",
    "contracts/budget-allocation",
    "contracts/recurring-payment",
    "contracts/batch-token-mint",
    "contracts/asset_control",
    "contracts/access-control",
    "contracts/users",
    "contracts/transactions",
]

[package]
name = "stellarspend-contracts-tests"
version = "0.1.0"
edition = "2021"
publish = false
autotests = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[[test]]
name = "snapshot_tests"
path = "tests/snapshot_tests.rs"

[[test]]
name = "memo_tests"
path = "tests/memo_tests.rs"

[[test]]
name = "governance_test"
path = "contracts/tests/governance_test.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stellarspend/stellarspend-contracts"

[workspace.dependencies]
soroban-sdk = "22.0.0"
shared = { path = "contracts/shared" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
